WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2009-04-28


Version 0.2.7 (under dev!):
   * irc: add irc plugin (replaces old IRC code in core)
   * irc: add smart join/part/quit message filter (task #8503)
   * irc: use of many addresses for servers (auto-switch when a connexion
     fails), nicks are now set with one option "nicks" (task #6088)
   * irc: add some colors in messages from server (for text and nicks)
     (task #8926)
   * irc: add color decoding in title for IRC channels (task #6030)
   * irc: fix lock with SSL servers when connection fails, and when
     disconnecting during connection problem (bug #17584)
   * irc: command /whois is now authorized in private without argument
     (task #7482)
   * irc: remove kernel info in CTCP VERSION reply (task #7494)
   * irc: add missing commands (328, 369)
   * aspell: improve plugin: use of many dictionaries, global dictionary, real
     time checking (optional), fix bugs with utf-8
   * xfer: add speed limit for DCC files sending (task #6178)
   * xfer: add new option "xfer.file.use_nick_in_filename" for Xfer files
     (task #7140)
   * relay: add relay plugin (network communication between WeeChat and remote
     application)
   * logger: add logger plugin with new features: backlog, level for messages
     to log (task #8592), level by buffer (task #6687), filename mask by
     buffer, option "name_lower_case" (bug #19522)
   * alias: fix bug with alias, use current buffer to run commands (bug #22876)
   * plugins: add some other plugins: alias, demo, fifo, tcl, xfer
   * scripts: new scripts: weeget.py (scripts manager), jabber.py (jabber/XMPP
     protocol), go.py (quick jump to buffers), buffers.pl (sidebar with list of
     buffers), iset.pl (set options interactively), weetris.pl (tetris-like
     game, mastermind.pl, ...
   * api: add hooks: command, timer, file descriptor, process, connection,